--- a/test/fixtures/game_boards.yml
+++ b/test/fixtures/game_boards.yml
@@ -3,13 +3,13 @@
 one:
   width: 1
   height: 1
+  bomb_amount: 1
   email: MyString
-  number_of_bombs: 1
   board: 
 
 two:
   width: 1
   height: 1
+  bomb_amount: 1
   email: MyString
-  number_of_bombs: 1
   board: 
